##Text encoding: utf-8

2008-09-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires goffice-0.6.5 or later.
	* docs/help/paint/C/fidures/*.png: new or updated screenshots.
	* glade/crystal/docprop.glade: updated the user interface to be
	more HIG compliant
	* libs/gcp/about.cc: updated copyright.
	* libs/gcp/document.h: API documentation work.
	* libs/gcp/fragment-residue.cc: fix an issue with residues management.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/residue.cc: ditto.
	* libs/gcp/residue.h: ditto.
	* libs/gcu/element.cc: add brazilian to known languages.
	* plugins/paint/residues/plugin.cc: fix an issue with residues management.
	* plugins/paint/residues/residues-dlg.cc: ditto.
	* plugins/paint/residues/residues.glade: ditto.
	* programs/calc/gchemcalc.cc: updated copyright.
	* programs/crystal/Makefile.am: add docprop.*.
	* programs/crystal/application.cc: add document properties support.
	* programs/crystal/docprop.cc: ditto.
	* programs/crystal/docprop.h: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.
	* programs/crystal/window.cc: updated copyright.
	* programs/spectra/window.cc: updated copyright.

2008-09-01 Daniel Leidert <daniel.leidert@wgdd.de>
	* docs/man/Makefile.am (gcu_man_src): Removed libgcu.3.xml.
	  (man_MANS): Removed libgcu.3. The filenames now automatically
	  consider stable/unstable releases. The target to create the manual
	  pages has been adusted accordingly.
	* docs/man/gcu_entities.dtd.in: Define a suffix if built for an
	  unstable release. Use the API version as version number.
	* docs/man/gchem3d.1.xml: Fixed IDs. Add suffix if necessary.
	* docs/man/gchemcalc.1.xml: Likewise.
	* docs/man/gchempaint.1.xml: Likewise.
	* docs/man/gchemtable.1.xml: Likewise.
	* docs/man/gcrystal.1.xml: Likewise.
	* docs/man/gspectrum.1.xml: Likewise.
	* docs/man/gchem3d-viewer-unstable.1: Renamed to docs/man/gchem3d.1
	  and updated.
	* docs/man/gchemcalc-unstable.1: Likewise.